lustre/ptlrpc/client.c
@@ -2654,6 +2654,7 @@ void ptlrpc_retain_replayable_request(struct ptlrpc_request *req,
                 return;
 
         lustre_msg_add_flags(req->rq_reqmsg, MSG_REPLAY);
+	req->rq_resend = 0;
 
         LASSERT(imp->imp_replayable);
         /* Balanced in ptlrpc_free_committed, usually. */
